Optimise speed and memory usage